# raylib_tmx_rpg_demo

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: abstract_character.h  animation.h  character.h  game.h  game_config.h  game_constant.h  map_system.h  ninja_character.h  raylib-tmx.h
resources/: background.tmx
src/: abstract_character.cpp  animation.cpp  character.cpp  game.cpp  game_config.cpp  main.cpp  map_system.cpp  ninja_character.cpp
